--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                                 <h3>Cynthia Beckrich</h3>
                             </div>
                             <p>Très belle réalisation! 
-                                travail propre et soigné, très bien emballé.
+                                travail propre et soigné, et très bien emballé.
                                 Ludovic est réactif, arrangeant et très gentil. 
                                 Je ne peut que recommander!</p>
                             <div class="apo">
