--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <div class="info_livraison">Nous contacter sur notre  &nbsp;<a target="_blank" href="https://www.facebook.com/profile.php?id=100094744261696"> Facebook  </a> &nbsp;  pour passer commande!</div><br>
+    <div class="info_livraison">Nous contacter sur &nbsp;<a target="_blank" href="https://www.facebook.com/profile.php?id=100094744261696"> Facebook  </a> &nbsp;  pour passer commande!</div><br>
     <header>
         <nav>
             <a class="">
