--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header>
         <nav>
             <a class="">
-                <img src="/logo danse des détails.png"
+                <img src="logo danse des détails.png"
                     alt="Logo La danse des détails avec branche feuillue - Création artisanale française">
             </a>
             <button>La danse des détails</button>
