--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <div class="cover home_header"
-                    style="background-image: url(Bannière-produit-la-danse-des-détails-ventre-produits-artisanaux-1.jpg)">
+                    style="background-image: url(baniere.jpg)">
                     <div class="filter"></div>
                     <h1>LA référence des articles locaux personnalisés
                         <span>Chez la danse des détails</span>
