--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                                 </svg>
                                 <h3>Heckel Carole</h3>
                             </div>
-                            <p>Très satisfaite du travail, de la précision et de la réactivité de Ludovic.
+                            <p>Je suis très satisfaite du travail, de la précision et de la réactivité de Ludovic.
                                 Emballage soigné, tres belle entreprise... continuez à nous faire de jolie proposition...</p>
                             <div class="apo">
                                 <svg width="122" height="96" viewBox="0 0 122 96" fill="none"
